Feature/1.21/map info changes (#308)
feat: overhaul minimap info display

Configurable components, which can be enabled/disabled/reordered.

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -219,5 +219,51 @@
 	"ftbchunks.waypoint_sharing": "Waypoint Sharing",
 	"ftbchunks.waypoint_sharing.waypoint_sharing_party": "Allow Sharing waypoints with Party",
 	"ftbchunks.waypoint_sharing.waypoint_sharing_server": "Allow Sharing waypoints with Server",
-	"ftbchunks.waypoint_sharing.waypoint_sharing_players": "Allow Sharing waypoints with Players"
+	"ftbchunks.waypoint_sharing.waypoint_sharing_players": "Allow Sharing waypoints with Players",
+	"ftbchunks.map_mode.none": "None",
+	"ftbchunks.map_mode.night": "Night",
+	"ftbchunks.map_mode.topography": "Topography",
+	"ftbchunks.map_mode.blocks": "Blocks",
+	"ftbchunks.map_mode.light_sources": "Light Sources",
+	"ftbchunks.ally_mode.default": "Default",
+	"ftbchunks.ally_mode.forced_all": "Forced All",
+	"ftbchunks.ally_mode.forced_none": "Forced None",
+	"ftbchunks.pvp_mode.always": "Always",
+	"ftbchunks.pvp_mode.never": "Never",
+	"ftbchunks.pvp_mode.per_team": "Per Team",
+	"ftbchunks.party_limit_mode.largest": "Largest",
+	"ftbchunks.party_limit_mode.owner": "Owner",
+	"ftbchunks.party_limit_mode.sum": "Sum",
+	"ftbchunks.party_limit_mode.average": "Average",
+	"ftbchunks.force_load_mode.default": "Default",
+	"ftbchunks.force_load_mode.never": "Never",
+	"ftbchunks.force_load_mode.always": "Always",
+	"ftbchunks.time_mode.twenty_four": "Twenty Four",
+	"ftbchunks.time_mode.twelve": "Twelve",
+	"ftbchunks.time_mode.clock": "Clock",
+	"ftbchunks.gui.move_up": "Move Up",
+	"ftbchunks.gui.move_down": "Move Down",
+	"minimap.info.ftbchunks.biome.title": "Biome",
+	"minimap.info.ftbchunks.biome.description": "Render Biome",
+	"minimap.info.ftbchunks.fps.title": "FPS",
+	"minimap.info.ftbchunks.fps.description": "Render FPS",
+	"minimap.info.ftbchunks.game_time.title": "Game Time",
+	"minimap.info.ftbchunks.game_time.description": "Render Game Time",
+	"minimap.info.ftbchunks.debug.title": "Debug",
+	"minimap.info.ftbchunks.debug.description": "Render Debug",
+	"minimap.info.ftbchunks.player_pos.title": "Player Pos",
+	"minimap.info.ftbchunks.player_pos.description": "Render Player Pos",
+	"minimap.info.ftbchunks.real_time.title": "Real Time",
+	"minimap.info.ftbchunks.real_time.description": "Render Real Time",
+	"minimap.info.ftbchunks.zone.title": "Zone",
+	"minimap.info.ftbchunks.zone.description": "Render Zone",
+	"ftbchunks.gui.toggle_visibility_off": "Toggle Visibility - Off",
+	"ftbchunks.gui.toggle_visibility_on": "Toggle Visibility - On",
+	"ftbchunks.gui.sort_minimap_info": "Minimap Info Settings",
+	"ftbchunks.minimap.info_hidden": "Hidden Minimap Info",
+	"ftbchunks.minimap.info_order": "Minimap info order",
+	"ftbchunks.show_wilderness.show_wilderness": "Show Wilderness",
+	"ftbchunks.show_wilderness.just_claimed": "Show only Claimed Chunks",
+	"tag.item.ftbchunks.right_click_blacklist": "Right Click Blacklist",
+	"tag.item.ftbchunks.right_click_whitelist": "Right Click Whitelist"
 }
