fix: fix map closing and minimap toggling
Handling of the map key to close an open map seems to be platform-specific
for... reasons?

Also, minimap toggle is now its own keybind, not the map key plus Control

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -87,6 +87,7 @@
 	"key.ftbchunks.minimap.zoomOut": "Zoom Out Minimap",
 	"key.ftbchunks.add_waypoint": "Quick Add Waypoint",
 	"key.ftbchunks.waypoint_manager": "Waypoint Manager",
+	"key.ftbchunks.toggle_minimap": "Toggle Minimap",
 	"wilderness": "Wilderness",
 	"ftbchunks.no_server_mod": "FTB Chunks requires mod on server!",
 	"ftbchunks.already_claimed": "Chunk is already claimed by %s",
