More work on claim gui

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -118,6 +118,10 @@
 	"ftbchunks.gui.chunk_info.text": "Claiming\nLeft Button;Drag to claim an area\nRight Button;Drag to unclaim an area\n\nForceloading\nShift + Left Button;Drag to forceload an area\nShift + Right Button;Drag to unforceload an area\nMouse Wheel;Rotate on forceloaded chunk to adjust auto-expiry\n\nMisc\nTab;Hold to hide chunk grid\nAlt;Hold to show absolute chunk claim/force times",
 	"ftbchunks.gui.delete": "Delete",
 	"ftbchunks.gui.quick_delete": "Quick Delete",
+	"ftbchunks.gui.opened_as": "Opened as %s",
+	"ftbchunks.gui.admin_mode_disabled": "Admin Mode: Disabled",
+	"ftbchunks.gui.admin_mode_enabled": "Admin Mode: Enabled",
+	"ftbchunks.gui.admin_mode_info": "When enabled you can modify chunks, regardless of ownership",
 	"ftbteamsconfig.ftbchunks": "FTB Chunks Properties",
 	"ftbteamsconfig.ftbchunks.allow_fake_players": "Allow All Fake Players",
 	"ftbteamsconfig.ftbchunks.allow_fake_players.tooltip": "Treat ALL fake players as allies of the team.\nWARNING: Setting this to true could allow hostile players to access your claims via any fake player. Set this to false if you're unsure.",
