Update waypoint add screen
Add location and dimension to waypoint add screen

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -126,6 +126,9 @@
   "ftbchunks.gui.unclaim_all.description": "Unclaim all chunks visible on the map?",
   "ftbchunks.gui.entity_icon_settings": "Entity Icon Settings",
   "ftbchunks.gui.enabled_disabled_count": "Enabled: %d, Disabled: %d",
+  "ftbchunks.gui.label.dimension": "Dimension",
+  "ftbchunks.gui.label.name": "Name",
+  "ftbchunks.gui.waypoint.no_name": "Please enter a name",
   "ftbteamsconfig.ftbchunks": "FTB Chunks Properties",
   "ftbteamsconfig.ftbchunks.allow_fake_players": "Allow All Fake Players",
   "ftbteamsconfig.ftbchunks.allow_fake_players.tooltip": "Treat ALL fake players as allies of the team.\nWARNING: Setting this to true could allow hostile players to access your claims via any fake player. Set this to false if you're unsure.",
