Make waypoint manger show if no waypoints

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -129,6 +129,7 @@
   "ftbchunks.gui.label.dimension": "Dimension",
   "ftbchunks.gui.label.name": "Name",
   "ftbchunks.gui.waypoint.no_name": "Please enter a name",
+  "ftbchunks.gui.no_waypoints": "No waypoints",
   "ftbteamsconfig.ftbchunks": "FTB Chunks Properties",
   "ftbteamsconfig.ftbchunks.allow_fake_players": "Allow All Fake Players",
   "ftbteamsconfig.ftbchunks.allow_fake_players.tooltip": "Treat ALL fake players as allies of the team.\nWARNING: Setting this to true could allow hostile players to access your claims via any fake player. Set this to false if you're unsure.",
@@ -300,5 +301,23 @@
   "mob_category.underground_water_creature": "Underground Water Creature",
   "mob_category.water_creature": "Water Creature",
   "mob_category.water_ambient": "Water Ambient",
-  "mob_category.misc": "Misc"
+  "mob_category.misc": "Misc",
+  "ftbchunks.commands.claimed": "Claimed chunks: %d",
+  "ftbchunks.commands.unclaimed": "Unclaimed chunks: %d",
+  "ftbchunks.commands.force_loaded": "Force-loaded chunks: %d",
+  "ftbchunks.command.unloaded": "Unloaded chunks: %d",
+  "ftbchunks.commands.location": "Location: %s",
+  "ftbchunks.commands.owner": "Owner: ",
+  "ftbchunks.commands.is_force_loaded": "Force Loaded: %s",
+  "ftbchunks.commands.not_claimed": "Chunk not claimed",
+  "ftbchunks.commands.cant_determined": "Can't determine chunk status",
+  "ftbchunks.commands.no_personal_info" : "Can't get personal team data for: %s",
+  "ftbchunks.command.extra_chunks_claimed": "%s has %d extra claimed chunks",
+  "ftbchunks.command.set_extra_chunks_claimed": "Set Extra chunks claimed to %d for %s",
+  "ftbchunks.command.extra_forceload_chunks": "%s has %d extra force loaded chunks",
+  "ftbchunks.command.set_extra_forceload_chunks": "Set extra force loaded chunks to %d for %s",
+  "ftbchunks.command.bypass_protection_enabled": "Bypass Protection: Enabled",
+  "ftbchunks.command.bypass_protection_disabled": "Bypass Protection: Disabled",
+  "ftbchunks.command.view_loaded": "Chunks Loaded: %d. Check the map to see loaded chunks",
+  "ftbchunks.command.waypoint_added": "Added waypoint '%s'"
 }
