--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -202,6 +202,8 @@
   "ftbchunks.require_game_stage.tooltip": "If true, players must have the 'ftbchunks_mapping' game stage (KubeJS and/or Gamestages required) to be able to open the map or see the minimap",
   "ftbchunks.location_mode_override": "Override Team \"Location Visibility\"",
   "ftbchunks.location_mode_override.tooltip": "If true, team \"Location Visibility\" settings are ignored, and all players can see each other anywhere on the map",
+  "ftbchunks.piston_protection": "Piston Protection",
+  "ftbchunks.piston_protection.tooltip": "If true, pistons may not push/pull blocks across claims owned by different teams (unless the block is entering/leaving a claim with block edit mode set to Public)\nIf 'disable_protection' is set to true, this setting is ignored.",
   "ftbchunks.fake_players.max_prevented_log_age": "Fake Player Prevented Access Log Age",
   "ftbchunks.fake_players.max_prevented_log_age.tooltip": "Age in days to keep logs of prevented fake player access\nNote: not fully implemented feature; will be used in future to display & control access by fake players to your claims",
   "ftbchunks.claim_result": "Chunks modified: %d / %d",
