fix: output of /ftbchunks admin unload_everything was misleading
Command did the right work, but output the total number of claimed
chunks, not the number of forceloaded chunks that got unforceloaded

Updated to show both numbers

https://github.com/FTBTeam/FTB-Mods-Issues/issues/1398

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -306,8 +306,8 @@
   "mob_category.misc": "Misc",
   "ftbchunks.commands.claimed": "Claimed chunks: %d",
   "ftbchunks.commands.unclaimed": "Unclaimed chunks: %d",
-  "ftbchunks.commands.force_loaded": "Force-loaded chunks: %d",
-  "ftbchunks.command.unloaded": "Unloaded chunks: %d",
+  "ftbchunks.commands.force_loaded": "Forceloaded chunks: %d",
+  "ftbchunks.commands.unloaded": "Un-forceloaded chunks: %d (of %d total claimed)",
   "ftbchunks.commands.location": "Location: %s",
   "ftbchunks.commands.owner": "Owner: ",
   "ftbchunks.commands.is_force_loaded": "Force Loaded: %s",
