Add config to change mode of pointer icon

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -78,6 +78,10 @@
   "ftbchunks.minimap.font_scale.tooltip": "Recommended to keep this to a multiple of 0.5",
   "ftbchunks.minimap.proportional": "Proportional sizing",
   "ftbchunks.minimap.proportional.tooltip": "When true, minimap size is proportional to 10%% of the screen width (modifiable by the Scale setting)\nWhen false, it is a fixed size regardless of screen resolution",
+  "ftbchunks.minimap.pointer_icon_mode": "Pointer Icon Mode",
+  "ftbchunks.minimap.pointer_icon_mode.both": "Both",
+  "ftbchunks.minimap.pointer_icon_mode.pointer": "Pointer",
+  "ftbchunks.minimap.pointer_icon_mode.face": "Face Icon",
   "sidebar_button.ftbchunks.chunks": "FTB Chunks: Map",
   "sidebar_button.ftbchunks.claim_chunks": "FTB Chunks: Claim Manager",
   "key.categories.ftbchunks": "FTB Chunks",
