--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -124,6 +124,8 @@
 	"ftbteamsconfig.ftbchunks.claim_visibility.tooltip": "Controls who can see your claims on the map or minimap",
 	"ftbteamsconfig.ftbchunks.allow_attack_blacklisted_entities": "Allow Attack Black Listed Entities",
 	"ftbteamsconfig.ftbchunks.allow_attack_blacklisted_entities.tooltip": "Allow enemy players to attack living entities the server owner gave protection too. Server owner must enable this setting and modify the entity_attack_blacklist tag.",
+	"ftbteamsconfig.ftbchunks.allow_any_fake_player_break_if_force_loaded": "Allow any Fake Player Block Break if Chunk is Force Loaded",
+	"ftbteamsconfig.ftbchunks.allow_any_fake_player_break_if_force_loaded.tooltip": "Allows any Fake Player Block Break if Chunk is Force Loaded. Beta builds of Create use fake players for block breaks.",
 	"ftbchunks.fake_players": "Allow Fake Players",
 	"ftbchunks.fake_players.tooltip": "CHECK: check fake player access like any real player\nDENY: never allow fake players\nALLOW: always allow fake players",
 	"ftbchunks.max_claimed_chunks": "Max Claimed Chunks per Player",
