feat: feedback message to player when interaction prevented
https://github.com/FTBTeam/FTB-Mods-Issues/issues/60

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -220,6 +220,7 @@
   "ftbchunks.claim_result.already_loaded": "Chunk already loaded",
   "ftbchunks.claim_result.not_loaded": "Chunk not loaded",
   "ftbchunks.need_to_claim_chunk": "You need to claim this chunk to interact with blocks here!",
+  "ftbchunks.action_prevented": "Interaction prevented here by claim protection!",
   "ftbchunks.label.show": "Show",
   "ftbchunks.label.hide": "Hide",
   "ftbchunks.message.no_pvp": "PvP combat is disabled here",
