feat: add team property defaults in server config
Applied when a new team is created. Backport from 1.21.

https://github.com/FTBTeam/FTB-Mods-Issues/issues/921

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -220,6 +220,20 @@
 	"ftbchunks.waypoint_sharing.waypoint_sharing_party": "Allow Sharing waypoints with Party",
 	"ftbchunks.waypoint_sharing.waypoint_sharing_server": "Allow Sharing waypoints with Server",
 	"ftbchunks.waypoint_sharing.waypoint_sharing_players": "Allow Sharing waypoints with Players",
+	"ftbchunks.team_prop_defaults": "Team Property Defaults",
+	"ftbchunks.team_prop_defaults.def_fake_players": "Allow All Fake Players",
+	"ftbchunks.team_prop_defaults.def_fake_player_ids": "Allow Fake Players by ID",
+	"ftbchunks.team_prop_defaults.def_named_fake_players": "Named Fake Players",
+	"ftbchunks.team_prop_defaults.def_allow_explosions": "Allow Explosion Damage",
+	"ftbchunks.team_prop_defaults.def_pvp": "Allow PvP Combat",
+	"ftbchunks.team_prop_defaults.def_mob_griefing": "Allow Mob Griefing Actions",
+	"ftbchunks.team_prop_defaults.def_block_edit_interact": "Block Edit/Interact Mode",
+	"ftbchunks.team_prop_defaults.def_block_edit": "Block Edit Mode",
+	"ftbchunks.team_prop_defaults.def_block_interact": "Block Interact Mode",
+	"ftbchunks.team_prop_defaults.def_entity_interact": "Entity Interact Mode",
+	"ftbchunks.team_prop_defaults.def_entity_attack": "Non-living Entity Attack Mode",
+	"ftbchunks.team_prop_defaults.def_player_visibility": "Location Visibility",
+	"ftbchunks.team_prop_defaults.def_claim_visibility": "Claim Visibility",
 	"ftbchunks.map_mode.none": "None",
 	"ftbchunks.map_mode.night": "Night",
 	"ftbchunks.map_mode.topography": "Topography",
