feat: add client config to control reticle/crosshair drawing on minimap
https://github.com/FTBTeam/FTB-Mods-Issues/issues/1523

--- a/common/src/main/resources/assets/ftbchunks/lang/en_us.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/en_us.json
@@ -71,6 +71,7 @@
   "ftbchunks.minimap.blur_mode.on": "On",
   "ftbchunks.minimap.blur_mode.off": "Off",
   "ftbchunks.minimap.compass": "Compass",
+  "ftbchunks.minimap.reticle": "Reticle Lines",
   "ftbchunks.minimap.visibility": "Visibility",
   "ftbchunks.minimap.zone": "Zone",
   "ftbchunks.minimap.square": "Square Minimap",
