--- a/common/src/main/resources/assets/ftbchunks/lang/zh_cn.json
+++ b/common/src/main/resources/assets/ftbchunks/lang/zh_cn.json
@@ -1,45 +1,270 @@
 {
-	"ftbchunks": "FTB区块声明",
-	"ftbchunks.noise": "噪点",
-	"ftbchunks.shadows": "阴影",
-	"ftbchunks.chunk_grid": "区块边界",
-	"ftbchunks.reduced_color_palette": "简化色板",
-	"ftbchunks.saturation": "饱和度",
-	"ftbchunks.debug_info": "调试信息",
-	"ftbchunks.claimed_chunks_on_map": "在地图上显示声明的区块",
-	"ftbchunks.own_claimed_chunks_on_map": "在地图上显示你自己声明的区块",
-	"ftbchunks.in_world_waypoints": "在世界上显示路径点",
-	"ftbchunks.death_waypoints": "死亡时创建死亡路径点",
-	"ftbchunks.map_mode": "地图模式",
-	"ftbchunks.water_height_factor": "水面权重系数",
-	"ftbchunks.minimap": "小地图位置",
-	"ftbchunks.minimap_scale": "小地图比例",
-	"ftbchunks.minimap_locked_north": "小地图锁定北方",
-	"ftbchunks.minimap_waypoints": "小地图路径点",
-	"ftbchunks.minimap_entities": "小地图实体",
-	"ftbchunks.minimap_entity_heads": "小地图实体图标",
-	"ftbchunks.minimap_player_heads": "小地图玩家图标",
-	"ftbchunks.minimap_large_entities": "小地图大型实体",
-	"ftbchunks.minimap_xyz": "小地图XYZ",
-	"ftbchunks.minimap_biome": "小地图生物群系",
-	"ftbchunks.minimap_blur": "小地图锐化",
-	"ftbchunks.minimap_compass": "小地图指南针",
-	"ftbchunks.minimap_visibility": "小地图透明度",
-	"ftbchunks.minimap_zone": "小地图zone",
-	"sidebar_button.ftbchunks.chunks": "FTB区块声明",
-	"key.ftbchunks.map": "打开FTB区块声明地图",
-	"wilderness": "野外",
-	"ftbchunks.no_server_mod": "服务器需要此Mod！",
-	"ftbchunks.already_claimed": "此区块已被%s认领",
-	"ftbchunks.gui.claimed": "已声明区块",
+	"ftbchunks": "FTB 区块",
+	"ftbchunks.zoom_warning": "由于内存限制，最大缩放受限",
+	"ftbchunks.appearance": "外观",
+	"ftbchunks.appearance.noise": "噪点效果",
+	"ftbchunks.appearance.shadows": "阴影",
+	"ftbchunks.appearance.chunk_grid": "区块网格",
+	"ftbchunks.appearance.reduced_color_palette": "简化调色板",
+	"ftbchunks.appearance.saturation": "饱和度",
+	"ftbchunks.appearance.claimed_chunks_on_map": "在地图上显示已占领区块",
+	"ftbchunks.appearance.own_claimed_chunks_on_map": "在地图上显示自己占领的区块",
+	"ftbchunks.appearance.map_mode": "地图模式",
+	"ftbchunks.appearance.biome_blend": "生物群系过渡",
+	"ftbchunks.biome_blend.none": "无（最快）",
+	"ftbchunks.biome_blend.blend_3x3": "3x3 过渡",
+	"ftbchunks.biome_blend.blend_5x5": "5x5 过渡",
+	"ftbchunks.biome_blend.blend_7x7": "7x7 过渡",
+	"ftbchunks.biome_blend.blend_9x9": "9x9 过渡",
+	"ftbchunks.biome_blend.blend_11x11": "11x11 过渡",
+	"ftbchunks.biome_blend.blend_13x13": "13x13 过渡",
+	"ftbchunks.biome_blend.blend_15x15": "15x15 过渡（最慢）",
+	"ftbchunks.appearance.water_height_factor": "水面高度系数",
+	"ftbchunks.appearance.only_surface_entities": "仅显示地表实体",
+	"ftbchunks.advanced": "高级设置",
+	"ftbchunks.advanced.debug_info": "调试信息",
+	"ftbchunks.waypoints": "路径点",
+	"ftbchunks.waypoints.in_world_waypoints": "在游戏中显示路径点",
+	"ftbchunks.waypoints.death_waypoints": "死亡时创建死亡路径点",
+	"ftbchunks.waypoints.death_waypoint_autoremove_distance": "自动移除死亡点距离",
+	"ftbchunks.waypoints.death_waypoint_autoremove_distance.tooltip": "若大于 0，最近的死亡点将在距离玩家小于此值时自动移除",
+	"ftbchunks.waypoints.waypoint_fade_distance": "信标最小淡出距离",
+	"ftbchunks.waypoints.waypoint_dot_fade_distance": "路径点最小淡出距离",
+	"ftbchunks.waypoints.waypoint_max_distance": "路径点最大绘制距离",
+	"ftbchunks.waypoints.waypoint_focus_distance": "聚焦路径点距离",
+	"ftbchunks.waypoints.waypoint_focus_distance.tooltip": "玩家准星需要距离路径点多近才会显示其名称？",
+	"ftbchunks.waypoints.waypoint_focus_scale": "聚焦路径点缩放",
+	"ftbchunks.waypoints.waypoint_focus_scale.tooltip": "聚焦的路径点会放大多少？",
+	"ftbchunks.advanced.memory": "内存使用",
+	"ftbchunks.advanced.memory.region_release_time": "闲置区域释放超时",
+	"ftbchunks.advanced.memory.region_release_time.tooltip": "释放未访问的 512x512 区域数据的超时时间（秒）\n数值越小内存占用越低，但需要频繁从磁盘重新加载数据\n设为 0 禁用区域数据释放",
+	"ftbchunks.advanced.memory.autorelease_on_map_close": "关闭地图时自动释放区域",
+	"ftbchunks.advanced.memory.autorelease_on_map_close.tooltip": "关闭大地图时，自动释放区域数据至指定数量\n数值越小内存占用越低，但需要频繁从磁盘重新加载数据\n设为 0 禁用区域数据释放",
+	"ftbchunks.advanced.memory.max_zoom_constraint": "限制地图最大缩放",
+	"ftbchunks.advanced.memory.max_zoom_constraint.tooltip": "若启用，地图最大缩放将根据已探索区域和可用内存自动限制\n若造成困扰，可设为关闭",
+	"ftbchunks.minimap": "小地图",
+	"ftbchunks.minimap.enabled": "启用",
+	"ftbchunks.minimap.position": "位置",
+	"ftbchunks.minimap.position_offset_x": "水平偏移量",
+	"ftbchunks.minimap.position_offset_y": "垂直偏移量",
+	"ftbchunks.minimap.position_offset_condition": "位置偏移条件",
+	"ftbchunks.minimap.position.none": "无",
+	"ftbchunks.minimap.position.bottom_left": "左下角",
+	"ftbchunks.minimap.position.left": "左侧",
+	"ftbchunks.minimap.position.top_left": "左上角",
+	"ftbchunks.minimap.position.top_right": "右上角",
+	"ftbchunks.minimap.position.right": "右侧",
+	"ftbchunks.minimap.position.bottom_right": "右下角",
+	"ftbchunks.minimap.scale": "缩放比例",
+	"ftbchunks.minimap.locked_north": "锁定北方",
+	"ftbchunks.minimap.show_player_when_unlocked": "未锁定北方时显示玩家方向",
+	"ftbchunks.minimap.waypoints": "路径点",
+	"ftbchunks.minimap.entities": "实体",
+	"ftbchunks.minimap.entity_heads": "实体头部",
+	"ftbchunks.minimap.player_heads": "玩家头部",
+	"ftbchunks.minimap.large_entities": "大型实体",
+	"ftbchunks.minimap.zoom": "缩放",
+	"ftbchunks.minimap.xyz": "坐标",
+	"ftbchunks.minimap.biome": "生物群系",
+	"ftbchunks.minimap.blur_mode": "模糊模式",
+	"ftbchunks.minimap.blur_mode.auto": "自动",
+	"ftbchunks.minimap.blur_mode.on": "开启",
+	"ftbchunks.minimap.blur_mode.off": "关闭",
+	"ftbchunks.minimap.compass": "指南针",
+	"ftbchunks.minimap.visibility": "可见性",
+	"ftbchunks.minimap.zone": "区域",
+	"ftbchunks.minimap.square": "方形小地图",
+	"ftbchunks.minimap.font_scale": "字体缩放",
+	"ftbchunks.minimap.font_scale.tooltip": "建议保持为 0.5 的倍数",
+	"ftbchunks.minimap.proportional": "按比例调整大小",
+	"ftbchunks.minimap.proportional.tooltip": "启用时，小地图大小按屏幕宽度的 10% 调整（可配合缩放设置）\n关闭时，大小固定，不受分辨率影响",
+	"sidebar_button.ftbchunks.chunks": "FTB 区块：地图",
+	"sidebar_button.ftbchunks.claim_chunks": "FTB 区块：领地管理",
+	"key.categories.ftbchunks": "FTB 区块",
+	"key.ftbchunks.map": "打开地图",
+	"key.ftbchunks.claim_manager": "打开领地管理",
+	"key.ftbchunks.minimap.zoomIn": "小地图放大",
+	"key.ftbchunks.minimap.zoomOut": "小地图缩小",
+	"key.ftbchunks.add_waypoint": "快速添加路径点",
+	"key.ftbchunks.waypoint_manager": "路径点管理",
+	"key.ftbchunks.toggle_minimap": "切换小地图",
+	"wilderness": "未占领区域",
+	"ftbchunks.no_server_mod": "服务器需安装 FTB Chunks 模组！",
+	"ftbchunks.already_claimed": "区块已被 %s 占领",
+	"ftbchunks.waypoint_added": "已添加路径点 '%s'",
+	"ftbchunks.deathpoint_removed": "路径点 '%s' 已自动移除",
+	"ftbchunks.gui.claimed": "已占领",
 	"ftbchunks.gui.force_loaded": "强制加载",
+	"ftbchunks.gui.force_load_expires": "强制加载到期时间",
 	"ftbchunks.gui.allies": "盟友",
 	"ftbchunks.gui.ally_whitelist": "盟友白名单",
 	"ftbchunks.gui.ally_blacklist": "盟友黑名单",
 	"ftbchunks.gui.large_map": "大地图",
-	"ftbchunks.gui.claimed_chunks": "声明区块",
-	"ftbchunks.gui.waypoints": "路径点",
+	"ftbchunks.gui.claimed_chunks": "已占领区块",
+	"ftbchunks.gui.waypoints": "路径点管理",
 	"ftbchunks.gui.add_waypoint": "添加路径点",
 	"ftbchunks.gui.settings": "设置",
-	"ftbchunks.gui.sync": "与盟友共享地图"
+	"ftbchunks.gui.settings.server": "服务器设置",
+	"ftbchunks.gui.sync": "与盟友共享地图",
+	"ftbchunks.gui.clear_deathpoints": "清除所有死亡路径点",
+	"ftbchunks.gui.delete_waypoint": "删除路径点 '%s'？",
+	"ftbchunks.gui.change_color": "修改颜色",
+	"ftbchunks.gui.hold_alt_for_dates": "按住 Alt：显示绝对时间",
+	"ftbchunks.gui.mouse_wheel_expiry": "鼠标滚轮：调整强制加载到期时间",
+	"ftbchunks.gui.teleport": "传送",
+	"ftbchunks.gui.large_map_info": "快捷键参考",
+	"ftbchunks.gui.large_map_info.text": "鼠标\n左键;点击/拖动移动地图视图\n右键;上下文菜单\n滚轮;缩放\n\n按键\n空格;居中显示玩家\nC;打开区块占领界面\nT;传送至目标点（需管理员权限）\nS;打开设置界面\nCtrl + S;打开服务器设置界面（需管理员权限）\nF3+G;切换区块网格",
+	"ftbchunks.gui.chunk_info": "区块占领参考",
+	"ftbchunks.gui.chunk_info.text": "占领\n左键;拖动选择区域占领\n右键;拖动选择区域取消占领\n\n强制加载\nShift + 左键;拖动选择区域强制加载\nShift + 右键;拖动选择区域取消强制加载\n滚轮;在强制加载的区块上调整自动到期时间\n\n其他\nTab;按住隐藏区块网格\nAlt;按住显示绝对占领/加载时间",
+	"ftbchunks.gui.delete": "删除",
+	"ftbchunks.gui.quick_delete": "快速删除",
+	"ftbteamsconfig.ftbchunks": "FTB 区块属性",
+	"ftbteamsconfig.ftbchunks.allow_fake_players": "允许所有假玩家",
+	"ftbteamsconfig.ftbchunks.allow_fake_players.tooltip": "将所有假玩家视为盟友\n警告：启用此选项可能导致敌对玩家通过假玩家访问你的领地。若不明确用途，请设为关闭。",
+	"ftbteamsconfig.ftbchunks.allow_named_fake_players": "指定假玩家名称/ID",
+	"ftbteamsconfig.ftbchunks.allow_named_fake_players.tooltip": "将指定假玩家视为盟友\n警告：添加条目可能导致敌对玩家通过假玩家访问你的领地。若不明确用途，请保持为空。",
+	"ftbteamsconfig.ftbchunks.allow_fake_players_by_id": "按玩家ID允许假玩家",
+	"ftbteamsconfig.ftbchunks.allow_fake_players_by_id.tooltip": "允许假玩家访问领地，仅当其ID对应真实玩家且该玩家是盟友或队友。若不明确用途，请设为开启。",
+	"ftbteamsconfig.ftbchunks.allow_explosions": "允许爆炸破坏",
+	"ftbteamsconfig.ftbchunks.allow_explosions.tooltip": "是否允许爆炸破坏已占领区块的方块？",
+	"ftbteamsconfig.ftbchunks.allow_pvp": "允许PvP战斗",
+	"ftbteamsconfig.ftbchunks.allow_pvp.tooltip": "是否允许在已占领区块进行玩家间战斗？\n需服务器配置设为 'per_team' 生效\n无法完全防御间接攻击，需攻击来源可追溯至玩家",
+	"ftbteamsconfig.ftbchunks.allow_mob_griefing": "允许怪物破坏行为",
+	"ftbteamsconfig.ftbchunks.allow_mob_griefing.tooltip": "是否允许怪物破坏已占领区块的方块？\n当前仅影响末影人，未来可能扩展\n苦力怕爆炸由“允许爆炸破坏”控制",
+	"ftbteamsconfig.ftbchunks.block_edit_and_interact_mode": "方块编辑/交互模式",
+	"ftbteamsconfig.ftbchunks.block_edit_and_interact_mode.tooltip": "用于放置、破坏或交互方块时",
+	"ftbteamsconfig.ftbchunks.block_edit_mode": "方块编辑模式",
+	"ftbteamsconfig.ftbchunks.block_edit_mode.tooltip": "用于放置或破坏方块时",
+	"ftbteamsconfig.ftbchunks.block_interact_mode": "方块交互模式",
+	"ftbteamsconfig.ftbchunks.block_interact_mode.tooltip": "用于右键点击方块时（如打开箱子或拉杆）",
+	"ftbteamsconfig.ftbchunks.entity_interact_mode": "实体交互模式",
+	"ftbteamsconfig.ftbchunks.entity_interact_mode.tooltip": "用于右键点击实体时",
+	"ftbteamsconfig.ftbchunks.nonliving_entity_attack_mode": "非生物实体攻击模式",
+	"ftbteamsconfig.ftbchunks.nonliving_entity_attack_mode.tooltip": "用于攻击非生物实体（画、物品展示框等）时",
+	"ftbteamsconfig.ftbchunks.minimap_mode": "小地图模式",
+	"ftbteamsconfig.ftbchunks.location_mode": "位置可见性",
+	"ftbteamsconfig.ftbchunks.location_mode.tooltip": "控制谁可以在小地图或地图上看到你（超出原版追踪范围）",
+	"ftbteamsconfig.ftbchunks.claim_visibility": "领地可见性",
+	"ftbteamsconfig.ftbchunks.claim_visibility.tooltip": "控制谁可以在小地图或地图上看到你的领地",
+	"ftbchunks.fake_players": "允许假玩家",
+	"ftbchunks.fake_players.tooltip": "CHECK: 按真实玩家权限检查假玩家\nDENY: 永远禁止假玩家\nALLOW: 永远允许假玩家",
+	"ftbchunks.max_claimed_chunks": "玩家最大可占领区块数",
+	"ftbchunks.max_claimed_chunks.tooltip": "默认值可通过 FTB Ranks 的 'ftbchunks.max_claimed' 权限节点覆盖",
+	"ftbchunks.max_force_loaded_chunks": "玩家最大可强制加载区块数",
+	"ftbchunks.max_force_loaded_chunks.tooltip": "默认值可通过 FTB Ranks 的 'ftbchunks.max_force_loaded' 权限节点覆盖",
+	"ftbchunks.force_load_mode": "强制加载模式",
+	"ftbchunks.force_load_mode.tooltip": "NEVER: 仅当队伍有在线玩家时允许强制加载\nALWAYS: 始终允许强制加载\nDEFAULT: 若队伍有玩家拥有 'ftbchunks.chunk_load_offline' 权限则允许",
+	"ftbchunks.disable_protection": "禁用领地保护",
+	"ftbchunks.disable_protection.tooltip": "适用于信任所有玩家的私服，领地仅用于强制加载",
+	"ftbchunks.pvp_mode": "是否允许在领地内PvP",
+	"ftbchunks.pvp_mode.tooltip": "ALWAYS: 所有领地允许PvP\nNEVER: 所有领地禁止PvP\nPER_TEAM: 由队伍属性决定",
+	"ftbchunks.ally_mode": "允许玩家修改盟友设置",
+	"ftbchunks.ally_mode.tooltip": "DEFAULT: 按FTB Teams的盟友状态判定\nFORCED_ALL: 所有玩家视为盟友\nFORCED_NONE: 所有玩家视为非盟友",
+	"ftbchunks.claim_dimension_blacklist": "禁止占领的维度",
+	"ftbchunks.claim_dimension_blacklist.tooltip": "禁止占领的维度ID列表（例：添加 \"minecraft:the_end\" 以禁止末地占领）\n支持通配符（如 \"othermod:*\" 匹配某模组所有维度）",
+	"ftbchunks.claim_dimension_whitelist": "允许占领的维度",
+	"ftbchunks.claim_dimension_whitelist.tooltip": "允许占领的维度ID列表（若不为空，则仅列表内维度可占领）\n语法同“禁止占领的维度”",
+	"ftbchunks.no_wilderness": "保护未占领区域",
+	"ftbchunks.no_wilderness.tooltip": "若开启，未占领区域不可修改方块",
+	"ftbchunks.no_wilderness_dimensions": "按维度保护未占领区域",
+	"ftbchunks.no_wilderness_dimensions.tooltip": "需先占领才能修改方块的维度ID列表（例：添加 \"minecraft:the_nether\" 以要求下界占领）\n支持通配符",
+	"ftbchunks.force_disable_minimap": "禁用客户端小地图",
+	"ftbchunks.max_idle_days_before_unclaim": "自动取消占领的闲置天数",
+	"ftbchunks.max_idle_days_before_unclaim.tooltip": "若队伍成员超过此天数未登录，领地自动释放\n设为 0 禁用",
+	"ftbchunks.max_idle_days_before_unforce": "自动取消强制加载的闲置天数",
+	"ftbchunks.max_idle_days_before_unforce.tooltip": "若队伍成员超过此天数未登录，强制加载的区块自动释放\n设为 0 禁用",
+	"ftbchunks.long_range_tracker_interval": "长距离追踪更新间隔",
+	"ftbchunks.long_range_tracker_interval.tooltip": "更新客户端长距离追踪数据的间隔（刻）\n数值越低更新越频繁，但增加服务器负载\n设为 0 禁用",
+	"ftbchunks.protect_unknown_explosions": "防止未知来源爆炸",
+	"ftbchunks.protect_unknown_explosions.tooltip": "阻止无法识别来源的爆炸（如恶魂火球）破坏受保护区块",
+	"ftbchunks.hard_team_claim_limit": "队伍硬性占领上限",
+	"ftbchunks.hard_team_claim_limit.tooltip": "队伍总占领上限，无视成员数量和计算模式\n设为 0 表示无限制",
+	"ftbchunks.hard_team_force_limit": "队伍硬性强制加载上限",
+	"ftbchunks.hard_team_force_limit.tooltip": "队伍总强制加载上限，无视成员数量和计算模式\n设为 0 表示无限制",
+	"ftbchunks.party_limit_mode": "队伍限制计算模式",
+	"ftbchunks.party_limit_mode.tooltip": "LARGEST: 取成员最大限制\nSUM: 累加成员限制\nOWNER: 仅取队长限制\nAVERAGE: 取成员平均限制",
+	"ftbchunks.require_game_stage": "需要游戏阶段解锁地图",
+	"ftbchunks.require_game_stage.tooltip": "若开启，玩家需拥有 'ftbchunks_mapping' 游戏阶段才能使用地图或小地图",
+	"ftbchunks.location_mode_override": "覆盖队伍“位置可见性”",
+	"ftbchunks.location_mode_override.tooltip": "若开启，所有玩家可在任何位置互相看到",
+	"ftbchunks.max_prevented_log_age": "假玩家拦截日志保留天数",
+	"ftbchunks.max_prevented_log_age.tooltip": "保留拦截假玩家访问日志的天数\n（未来将用于显示和控制假玩家访问）",
+	"ftbchunks.piston_protection": "活塞保护",
+	"ftbchunks.piston_protection.tooltip": "若开启，活塞无法跨不同队伍的领地推拉方块（除非目标方块为公开编辑模式）\n若“禁用领地保护”开启，此设置失效",
+	"ftbchunks.claim_result": "已修改区块：%d / %d",
+	"ftbchunks.claim_result.other": "未知错误",
+	"ftbchunks.claim_result.not_owner": "非区块所有者",
+	"ftbchunks.claim_result.not_enough_power": "区块上限已满",
+	"ftbchunks.claim_result.already_claimed": "区块已被占领",
+	"ftbchunks.claim_result.dimension_forbidden": "此维度禁止占领",
+	"ftbchunks.claim_result.not_claimed": "区块未占领",
+	"ftbchunks.claim_result.already_loaded": "区块已加载",
+	"ftbchunks.claim_result.not_loaded": "区块未加载",
+	"ftbchunks.need_to_claim_chunk": "需占领此区块才能交互！",
+	"ftbchunks.label.show": "显示",
+	"ftbchunks.label.hide": "隐藏",
+	"ftbchunks.message.no_pvp": "此区域禁止PvP",
+	"ftbchunks.game_time": "游戏时间：%s",
+	"ftbchunks.real_time": "现实时间：%s",
+	"ftbchunks.fps": "帧率：%d",
+	"ftbchunks.minimap.show_game_time": "显示游戏时间",
+	"ftbchunks.minimap.show_fps": "显示帧率",
+	"ftbchunks.minimap.show_real_time": "显示现实时间",
+	"ftbchunks.waypoint.shared": "已与你共享路径点 '%s'！点击添加",
+	"ftbchunks.waypoint.shared_by_you": "你已共享路径点 '%s'！",
+	"ftbchunks.waypoint.share": "共享",
+	"ftbchunks.waypoint.share.server": "服务器",
+	"ftbchunks.waypoint.share.party": "队伍",
+	"ftbchunks.waypoint.share.player": "玩家",
+	"ftbchunks.waypoint_sharing": "路径点共享",
+	"ftbchunks.waypoint_sharing.waypoint_sharing_party": "允许与队伍共享路径点",
+	"ftbchunks.waypoint_sharing.waypoint_sharing_server": "允许与服务器共享路径点",
+	"ftbchunks.waypoint_sharing.waypoint_sharing_players": "允许与玩家共享路径点",
+	"ftbchunks.map_mode.none": "无",
+	"ftbchunks.map_mode.night": "夜间模式",
+	"ftbchunks.map_mode.topography": "地形模式",
+	"ftbchunks.map_mode.blocks": "方块模式",
+	"ftbchunks.map_mode.light_sources": "光源模式",
+	"ftbchunks.ally_mode.default": "默认",
+	"ftbchunks.ally_mode.forced_all": "强制全体盟友",
+	"ftbchunks.ally_mode.forced_none": "强制无盟友",
+	"ftbchunks.pvp_mode.always": "始终允许",
+	"ftbchunks.pvp_mode.never": "始终禁止",
+	"ftbchunks.pvp_mode.per_team": "按队伍设置",
+	"ftbchunks.party_limit_mode.largest": "最大值",
+	"ftbchunks.party_limit_mode.owner": "队长限制",
+	"ftbchunks.party_limit_mode.sum": "总和",
+	"ftbchunks.party_limit_mode.average": "平均值",
+	"ftbchunks.force_load_mode.default": "默认",
+	"ftbchunks.force_load_mode.never": "永不",
+	"ftbchunks.force_load_mode.always": "始终",
+	"ftbchunks.time_mode.twenty_four": "24小时制",
+	"ftbchunks.time_mode.twelve": "12小时制",
+	"ftbchunks.time_mode.clock": "钟表模式",
+	"ftbchunks.gui.move_up": "上移",
+	"ftbchunks.gui.move_down": "下移",
+	"minimap.info.ftbchunks.biome.title": "生物群系",
+	"minimap.info.ftbchunks.biome.description": "显示生物群系",
+	"minimap.info.ftbchunks.fps.title": "帧率",
+	"minimap.info.ftbchunks.fps.description": "显示帧率",
+	"minimap.info.ftbchunks.game_time.title": "游戏时间",
+	"minimap.info.ftbchunks.game_time.description": "显示游戏时间",
+	"minimap.info.ftbchunks.debug.title": "调试",
+	"minimap.info.ftbchunks.debug.description": "显示调试信息",
+	"minimap.info.ftbchunks.player_pos.title": "玩家坐标",
+	"minimap.info.ftbchunks.player_pos.description": "显示玩家坐标",
+	"minimap.info.ftbchunks.real_time.title": "现实时间",
+	"minimap.info.ftbchunks.real_time.description": "显示现实时间",
+	"minimap.info.ftbchunks.zone.title": "区域",
+	"minimap.info.ftbchunks.zone.description": "显示区域",
+	"ftbchunks.gui.toggle_visibility_off": "切换可见性 - 关闭",
+	"ftbchunks.gui.toggle_visibility_on": "切换可见性 - 开启",
+	"ftbchunks.gui.sort_minimap_info": "小地图信息排序",
+	"ftbchunks.minimap.info_hidden": "隐藏的小地图信息",
+	"ftbchunks.minimap.info_order": "小地图信息顺序",
+	"ftbchunks.minimap.info_settings": "信息设置",
+	"ftbchunks.show_wilderness.show_wilderness": "显示未占领区域",
+	"ftbchunks.show_wilderness.just_claimed": "仅显示已占领区块",
+	"tag.item.ftbchunks.right_click_blacklist": "右键黑名单",
+	"tag.item.ftbchunks.right_click_whitelist": "右键白名单"
 }
